...
                cursorColor = MaterialTheme.colors.onPrimary,
                focusedIndicatorColor = Color.Transparent
            ),
            modifier = Modifier
                .focusRequester(focusRequester)
                .semantics {
                    contentDescription = "SearchInputField"
                }
        )
        SideEffect {
            focusRequester.requestFocus()
        }
        Text(
...
